# cunit

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  buffer.c  buffer.h  config.h.in  cunit.c  cunit.h  debug.c  debug.h  fast_append.c  fast_append.h  feature_checks.cmake  out_collector.c  out_collector.h  process.h  process_createprocess.c  process_popen.c  winerr.c  winerr.h
lib/include/: cunit.h  cunit_assert.h
tests/: CMakeLists.txt  aux_tests.c  cunit_tests.c  main.c
